Converted medium,board,grade from string to list